<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sjsu.backitup.HomeActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textInterval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_setInter" />

        <EditText
            android:id="@+id/edit_inter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/text_path1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_path1" />

        <EditText
            android:id="@+id/edit_path1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </EditText>

        <Button
            android:id="@+id/add_directory1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addDirectory1"
            android:text="@string/browse" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/text_path2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_path2" />

        <EditText
            android:id="@+id/edit_path2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <Button
            android:id="@+id/add_directory2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addDirectory2"
            android:text="@string/browse" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/text_path3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_path3" />

        <EditText
            android:id="@+id/edit_path3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <Button
            android:id="@+id/add_directory3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addDirectory3"
            android:text="@string/browse" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/text_path4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_path4" />

        <EditText
            android:id="@+id/edit_path4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <Button
            android:id="@+id/add_directory4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addDirectory4"
            android:text="@string/browse" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:id="@+id/text_path5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_path5" />

        <EditText
            android:id="@+id/edit_path5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <Button
            android:id="@+id/add_directory5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addDirectory5"
            android:text="@string/browse" />
    </LinearLayout>

    <Button
        android:id="@+id/add_directory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addDirectory"
        android:text="@string/add_directory" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SAVE" 
        android:onClick="savePreferences"/>

</LinearLayout>